optimize_Growth.ipynb

--- a/script/optimize_Growth.ipynb
+++ b/script/optimize_Growth.ipynb
@@ -29,7 +29,7 @@
     "# CONFIGURATION (fixed paths for direct run)\n",
     "# -----------------------------------------------------------------------------\n",
     "INPUT_DIR = 'path/to/output/models'\n",
-    "OUTPUT_CSV = 'path/to/output/date.csv'\n",
+    "OUTPUT_CSV = 'path/to/output/data.csv'\n",
     "\n",
     "\n",
     "# -----------------------------------------------------------------------------\n",
